5610.	[bug]		Prevent a crash which could happen when a lookup
			triggered by "stale-answer-client-timeout" was attempted
			right after recursion for a client query finished.
			[GL #2594]

5609.	[func]		GSSAPI support no longer uses the ISC SPNEGO
			implementation. [GL #2607]

5608.	[bug]		Dig now honors +retry=0 and +tries=1 when queries
			are sent over TCP (+tcp) and the remote server closes
			the connection prematurely. [GL #2490]

5607.	[bug]		Rekey after 'rndc dnssec -checkds' or 'rndc dnssec
			-rollover' command is received, because such a command
			may influence the next key event. [GL #2488]

5606.	[bug]		CDS/CDNSKEY DELETE records were not removed when a zone
			transitioned from secure to insecure. "named-checkzone"
			should not complain if such records exist in an
			unsigned zone. [GL #2517]

5605.	[bug]		"dig -u" now uses CLOCK_REALTIME for more accurate
			time reporting. [GL #2592]

5603.	[bug]		Fix a memory leak that occurred when named failed to
			bind a UDP socket to a network interface. [GL #2575]

5602.	[bug]		Fix the TCPDNS and TLSDNS timers, so TCP initial
			and idle timers work correctly. [GL #2573]

5601.	[bug]		Dynamic zones with dnssec-policy could not be thawed
			because KASP zones were always considered dynamic;
			previously, dynamic KASP zones did not check whether
			updates were disabled. This has been fixed. [GL #2523]

	--- 9.16.13 released ---

5597.	[bug]		When serve-stale was enabled and starting the recursive
			resolution process for a query failed, a named instance
			could crash if it was configured as both a recursive and
			authoritative server. This problem was introduced by
			change 5573 and has now been fixed. [GL #2565]

5595.	[cleanup]	Public header files for BIND 9 libraries no longer
			directly include third-party library headers. This
			prevents the need to include paths to third-party header
			files in CFLAGS whenever BIND 9 public header files are