@@ -40,7 +40,6 @@ options {
 	stale-answer-enable yes;
 	stale-cache-enable yes;
 	stale-answer-ttl 3;
-	stale-answer-client-timeout disabled;
 	stale-refresh-time 4;
 	resolver-query-timeout 10;
 	fetches-per-zone 1 fail;
