@@ -39,6 +39,10 @@ Feature Changes
   system Kerberos library. All major Kerberos libraries contain the SPNEGO
   mechanism implementation. [GL #2607]
 
+- The default value for the ``stale-answer-client-timeout`` option was
+  changed from ``1800`` (ms) to ``off``. The default value may be
+  changed again in future releases as this feature matures. [GL #2608]
+
 Bug Fixes
 ~~~~~~~~~
 
